--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "eliot-lepoittevin-portfolio",
   "version": "0.0.0",
   "scripts": {
-    "start": "vite --port 8080",
+    "dev": "vite --port 8080",
     "build": "vite build",
     "deploy": "vite preview"
   },
-  "devDependencies": {
-    "vite": "^2.3.0"
-  },
   "dependencies": {
-    "gh-pages": "^6.0.0",
-    "three": "^0.128.0"
+    "three": "^0.128.0",
+    "vite": "^4.4.9"
   }
 }
